Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Bestie Chat</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcome to Bestie Chat 💕</h1>
