Fix heading for Bestie Chat

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Bestie Chat 💕</h1>
+
+  <h1>Bestie Chat 💕</h1>
+
+  <div id="chat-box"></div>
+
+  <input type="text" id="message-input" placeholder="Type a message...">
+  <button onclick="sendMessage()">Send</button>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
